changing style (button, map, etc)

--- a/index.html
+++ b/index.html
@@ -1,16 +1,22 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header>
-      <h1>GRAPH</h1>
-    </header>
-    <button class=start>Start</button>
-    <script type="text/javascript" src="main.js"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <title></title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Mono&display=swap" rel="stylesheet">
+  <link href="//netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <button class="start">
+    <i class="icon-play"></i>
+  </button>
+  <button class="reload">
+    <i class="icon-repeat"></i>
+  </button>
+  <script type="text/javascript" src="main.js"></script>
+</body>
+
 </html>
