adding reload button, changing how it looks

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
 </head>
 
 <body>
-  <button class="start">
-    <i class="icon-play"></i>
-  </button>
-  <button class="reload">
-    <i class="icon-repeat"></i>
-  </button>
+  <div class="controller">
+    <button class="start">
+      <i class="icon-play"></i>
+    </button>
+    <button class="reload">
+      <i class="icon-repeat"></i>
+    </button>
+  </div>
   <script type="text/javascript" src="main.js"></script>
 </body>
 
